# ei2f

./: .gitignore  COPYING.LESSER  Makefile.am  configure.ac
docs/: Doxyfile.in  Makefile.am
include/: Makefile.am
include/ei2f/: Configurable.h  CycleGuard.h  ItemInfo.h  ListPipeline.h  ObjectConfig.h  PathMixin.h  Stage.h  common.h  exceptions.h  helper.h  patterns.h  plugin_common.h  pluginloader.h
include/ei2f/backend/: Backend.h  BinaryAPI.h  ItemAPI.h
include/ei2f/translator/: Translator.h
include/ei2f/transport/: Transport.h
include/ei2f/updater/: ItemUpdater.h  Updater.h
plugins/backend/: BerkeleyDB.cpp  BerkeleyDB.h  BloomFilter.cpp  BloomFilter.h  Online.cpp  Online.h  PocoSQLite.cpp  PocoSQLite.h  StdUnorderedSet.cpp  StdUnorderedSet.h
plugins/translator/: SHA256.cpp  SHA256.h
plugins/transport/: File.cpp  File.h  HTTP.cpp  HTTP.h
plugins/updater/: Binary.cpp  Binary.h  DifferentialLine.cpp  DifferentialLine.h  DifferentialLineSeparated.cpp  DifferentialLineSeparated.h  Line.cpp  Line.h
src/: ItemInfo.cpp  ListPipeline.cpp  ObjectConfig.cpp  PathMixin.cpp  Stage.cpp  helper.cpp  libei2f_bench.cpp  patterns.cpp  pluginloader.cpp
src/backend/: Backend.cpp  BinaryAPI.cpp  ItemAPI.cpp
src/translator/: Translator.cpp
src/transport/: Transport.cpp
src/updater/: ItemUpdater.cpp  Updater.cpp
test/: main.c  test_Backend_ReadIterator.cpp  test_BloomFilter.cpp  test_Online.cpp  test_memstream.c  test_string_replace.cpp
