AUTOMAKE_OPTIONS = foreign subdir-objects

nobase_include_HEADERS = ei2f/Configurable.h \
                         ei2f/exceptions.h \
                         ei2f/ItemInfo.h \
                         ei2f/ObjectConfig.h \
                         ei2f/patterns.h \
                         ei2f/pluginloader.h \
                         ei2f/common.h \
                         ei2f/CycleGuard.h \
                         ei2f/helper.h \
                         ei2f/ListPipeline.h \
                         ei2f/PathMixin.h \
                         ei2f/plugin_common.h \
                         ei2f/Stage.h \
                         ei2f/translator/Translator.h \
                         ei2f/updater/Updater.h \
                         ei2f/updater/ItemUpdater.h \
                         ei2f/backend/Backend.h \
                         ei2f/backend/ItemAPI.h \
                         ei2f/backend/BinaryAPI.h \
                         ei2f/transport/Transport.h


